Implemented Responsive Design

--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
           class="nav__logo"
           id="logo"
         />
+
+        <div class="nav__container-icon">
+          <div>
+            <span class="line-1"></span>
+            <span class="line-2"></span>
+            <span class="line-3"></span>
+          </div>
+        </div>
+
+        <!-- <ul>
+          <li>Hello</li>
+        </ul> -->
+
         <ul class="nav__links">
           <li class="nav__item">
             <a class="nav__link" href="#section--1">Features</a>
@@ -73,9 +86,9 @@
           src="bankist2.jpg"
           data-src="bankist.jpg"
           alt="Computer"
-          class="features__img lazy-img"
+          class="features__img lazy-img computer-img"
         />
-        <div class="features__feature">
+        <div class="features__feature computer-img-details">
           <div class="features__icon">
             <svg>
               <use xlink:href="img/icons.svg#icon-monitor"></use>
@@ -113,7 +126,7 @@
           src="img/card-lazy.jpg"
           data-src="img/card.jpg"
           alt="Credit card"
-          class="features__img lazy-img"
+          class="features__img lazy-img card-img"
         />
         <div class="features__feature">
           <div class="features__icon">
@@ -145,13 +158,13 @@
             class="btn operations__tab operations__tab--1 operations__tab--active"
             data-tab="1"
           >
-            <span>01</span>Instant Transfers
+            <span>01</span><span>Instant</span> Transfers
           </button>
           <button class="btn operations__tab operations__tab--2" data-tab="2">
-            <span>02</span>Instant Loans
+            <span>02</span><span>Instant</span> Loans
           </button>
           <button class="btn operations__tab operations__tab--3" data-tab="3">
-            <span>03</span>Instant Closing
+            <span>03</span><span>Instant</span> Closing
           </button>
         </div>
         <div
